--- a/components/emailLink/emailLink.module.scss
+++ b/components/emailLink/emailLink.module.scss
@@ -10,6 +10,7 @@
     color: $color-text-secondary;
     text-decoration: unset;
     cursor: pointer;
+    z-index: -1;
     @include s {
         left: 20px;
         bottom: 40px;
