--- a/components/signUpForm/signUpForm.module.scss
+++ b/components/signUpForm/signUpForm.module.scss
@@ -3,12 +3,14 @@
 
 .form{
     margin-top: Clamp(40px, 10vw, 98px);
+    padding-bottom: 30px;
 
     &__wrapper {
         display: flex;
         flex-wrap: wrap;
         row-gap: 22px;
         justify-content: space-between;
+        background-color: $color-body;
   
         @include s {
             padding: 0px 20px;
@@ -204,17 +206,8 @@
 
 .button {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px 0;
     margin-top: 20px;
-    
-    font-family: $inter;
-    font-size: $f-regular;
-    color: $color-white;
     background-color: $color-disabled;
-    
     border: unset;
     border-radius: $radius-primary;
     transition: .3s ease-in-out;
@@ -228,5 +221,19 @@
     &_active {
         background-color: $color-primary-default;
         pointer-events: all;
+    }
+
+    a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 16px 0;
+
+        font-family: $inter;
+        font-size: $f-regular;
+        color: $color-white;
+        text-decoration: unset;
     }
 }
